frontend/stylesheets/fonts.css.scss
@font-face {
  font-family: 'Fun City';
  font-weight: 400;
  src: url('/fonts/funcity/2D178A_1_0.eot');
  src: url('/fonts/funcity/2D178A_1_0.ttf');
  src: url('/fonts/funcity/2D178A_1_0.woff');
}

@font-face {
  font-family: 'Fun City';
  font-weight: 700;
  src: url('/fonts/funcity/2D178A_0_0.eot');
  src: url('/fonts/funcity/2D178A_0_0.ttf');
  src: url('/fonts/funcity/2D178A_0_0.woff');
}

@font-face {
  font-family: "simplifica";
  src: url("/fonts/simplifica.woff");
}

@font-face {
  font-family: "dinot";
  font-weight: normal;
  src: url("/fonts/dinot/DINOT-Light.eot");
  src: url("/fonts/dinot/DINOT-Light.eot?#iefix") format("eot"),
  url("/fonts/dinot/DINOT-Light.woff") format("woff"),
  url("/fonts/dinot/DINOT-Light.otf") format("otf");
}

@font-face {
  font-family: "dinot";
  font-weight: 300;
  src: url("/fonts/dinot/DINOT-Medium.eot");
  src: url("/fonts/dinot/DINOT-Medium.eot?#iefix") format("eot"),
  url("/fonts/dinot/DINOT-Medium.woff") format("woff"),
  url("/fonts/dinot/DINOT-Medium.otf") format("otf");
}

@font-face {
  font-family: "dinot-medium";
  font-weight: 500;
  src: url("/fonts/dinot/DINOT-Medium.eot");
  src: url("/fonts/dinot/DINOT-Medium.eot?#iefix") format("eot"),
  url("/fonts/dinot/DINOT-Medium.woff") format("woff"),
  url("/fonts/dinot/DINOT-Medium.otf") format("otf");
}

@font-face {
  font-family: "dinot-regular";
  font-weight: 300;
  src: url("/fonts/dinot/DINOT-Regular.eot");
  src: url("/fonts/dinot/DINOT-Regular.eot?#iefix") format("eot"),
  url("/fonts/dinot/DINOT-Regular.woff") format("woff"),
  url("/fonts/dinot/DINOT-Regular.otf") format("otf");
}

@font-face {
  font-family: "dinot-bold";
  src: url("/fonts/dinot/DINOT-Bold.eot");
  src: url("/fonts/dinot/DINOT-Bold.eot?#iefix") format("eot"),
  url("/fonts/dinot/DINOT-Bold.woff") format("woff"),
  url("/fonts/dinot/DINOT-Bold.otf") format("otf");
}

@font-face {
  font-family: "simplifica";
  src: url("/fonts/simplifica.woff");
}

@font-face {
  font-family: "dinot";
  font-weight: bold;
  src: url("/fonts/dinot/DINOT-Bold.eot");
  src: url("/fonts/dinot/DINOT-Bold.eot?#iefix") format("eot"),
  url("/fonts/dinot/DINOT-Bold.woff") format("woff"),
  url("/fonts/dinot/DINOT-Bold.otf") format("otf");
}

.simplifica {
  font-family: "simplifica";
  font-size: 30px;
}

.ostrich {
  font-family: "Ostrich Sans";
}

.fun-city {
  font-family: "Fun City";
}

// fonts and styles according to doc //
.x {
  font-family: "Fun City";
  font-size: 16px;
  font-weight: bold;
}

.HBIG {
  font-family: "dinot-regular";
  font-size: 30px;
}

.H1 {
  font-family: "dinot-bold";
  font-size: 24px;
}

.H2 {
  font-family: "dinot-bold";
  font-size: 20px;
}

.H2-Amplification {
  font-family: "dinot-bold";
  font-size: 24px;
  line-height: 30px;
}

.H3 {
  font-family: "dinot-bold";
  font-size: 18px;
}

H3-Amplification {
  font-family: "dinot-bold";
  font-size: 16.25px;
  line-height: 24px;
  font-weight: 400;
}

.H2R {
  font-family: "dinot-regular";
  font-size: 20px;
}

.H3R {
  font-family: "dinot-regular";
  font-size: 18px;
}

.SH {
  font-family: "dinot-bold";
  font-size: 12px;
}

.SHR {
  font-family: "dinot";
  font-size: 12px;
}

.BL {
  font-family: "dinot-bold";
  font-size: 12px;
}

.B1 {
  font-family: "dinot-regular";
  font-size: 16px;
}

.B1-Amplification {
  font-family: "dinot-regular";
  font-size: 13px;
  line-height: 20px;
  font-weight: normal;
}

.B1B {
  font-family: "dinot-bold";
  font-size: 16px;
}

.B2 {
  font-family: "dinot-regular";
  font-size: 12px;
}

.B2B {
  font-family: "dinot-bold";
  font-size: 12px;
}

.B2-Amplification {
  font-family: "dinot-regular";
  // font-size: 13px;
  font-size: 10px;
  line-height: 15px;
}

.B2-M-Amplification {
  font-family: "dinot-medium";
  font-size: 10px;
  // font-size: 13px;
  line-height: 15px;
}

.G1 {
  font-family: "dinot-regular";
  font-size: 8px;
  font-weight: normal;
  line-height: 12px;
}

.G2 {
  font-family: "dinot-regular";
  font-size: 6.5px;
  line-height: 9.75px;
  font-weight: normal;
}
.B1M {
  font-family: "dinot-medium";
  font-size: 16px;
}

.B2M {
  font-family: "dinot-medium";
  font-size: 12px;
}

.B1B {
  font-family: "dinot-bold";
  font-size: 16px;
}

.B2B {
  font-family: "dinot-bold";
  font-size: 12px;
}

